[project]
name = "therock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "build>=1.2.2",
    "cppheaderparser>=2.7.4",
    "joblib>=1.4.2",
    "meson>=1.7.0",
    "msgpack>=1.1.0",
    "python-magic>=0.4.27 ; sys_platform != 'win32'",
    "pyyaml==6.0.2",
    "setuptools>=80.9.0",
    "tomli==2.2.1 ; python_full_version < '3.11'",
]
